fix(security): harden CORS with env origins and explicit headers for REQ-47 Task 7
Replace wildcard Allow-Headers and hardcoded localhost origin with CORS_ALLOWED_ORIGINS, allowlisted headers, maxAge, and exposed rate-limit headers.